# chopsticks-qt_Win10

./: BUILD_STATUS.md  CMakeLists.txt  CMakePresets.json  LICENSE.txt  MESSAGE_IMPROVEMENTS.md  NETWORK_FEATURES.md  README.md  build_installer.bat  build_release.bat  create-package.ps1  create_package.bat  quick_build.bat  test_qt.cmake
resources/: app.rc.in  chopsticks.qrc
src/: aiplayer.cpp  aiplayer.h  chopsticks-qt.cpp  chopsticks-qt.cpp.backup  debuginfowindow.cpp  debuginfowindow.h  debuginfowindow_backup.cpp  debuginfowindow_minimal.cpp  debuginfowindow_original.cpp  gamewindow.cpp  gamewindow.h  main_network_example.cpp  networkdialog.cpp  networkdialog.h  networkmanager.cpp  networkmanager.h  player.cpp  player.h  version.h.in
